# FlashVLM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashvlm_internvl_7b.yaml  flashvlm_llava_7b.yaml  flashvlm_phi_vision_4b.yaml  flashvlm_qwen_vl_7b.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Captioning.md  FAQ.md  Home.md  Installation.md  Models.md  Quick-Start.md  Training.md  VQA.md
examples/: benchmark_vlm.py  image_captioning.py  multimodal_chat.py  visual_grounding.py  visual_qa.py
flashvlm/: __init__.py  cli.py  registry.py
flashvlm/analytics/: __init__.py  benchmark.py  metrics.py
flashvlm/cfg/: __init__.py  config.py
flashvlm/data/: __init__.py  datasets.py  tokenizer.py  transforms.py
flashvlm/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashvlm/eval/: __init__.py  evaluator.py
flashvlm/generation/: __init__.py  beam_search.py  sampler.py  streaming.py
flashvlm/models/: __init__.py  lora.py  projector.py  video_encoder.py  vision_encoder.py  vlm.py
flashvlm/models/architectures/: __init__.py  internvl.py  llava.py  phi_vision.py  qwen_vl.py
flashvlm/solutions/: __init__.py  document_qa.py  image_analyzer.py  multimodal_chat.py
flashvlm/tasks/: __init__.py  captioning.py  chart_qa.py  grounding.py  gui_agent.py  ocr.py  reasoning.py  vqa.py
flashvlm/training/: __init__.py  dpo.py  multi_stage.py  rlhf.py  sft.py
flashvlm/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: __init__.py  test_comprehensive.py  test_models.py  test_new_components.py  test_registry.py  test_tasks.py
