[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashvlm"
version = "1.0.0"
description = "FlashVLM - High-Performance Vision-Language Models for Multimodal AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "FlashVision Team"},
]
keywords = ["vision-language-model", "multimodal", "vlm", "llava", "qwen-vl", "internvl", "deep-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
training = [
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "deepspeed>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
all = ["flashvlm[training,dev,docs]"]

[project.scripts]
flashvlm = "flashvlm.cli:main"

[project.urls]
Homepage = "https://github.com/FlashVision/FlashVLM"
Documentation = "https://github.com/FlashVision/FlashVLM/tree/main/docs"
Repository = "https://github.com/FlashVision/FlashVLM"
Issues = "https://github.com/FlashVision/FlashVLM/issues"

[tool.setuptools.packages.find]
include = ["flashvlm*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
